# mursfoto-cli

./: .eslintrc.js  .gitignore  CHANGELOG.md  CLINE_開發指南.md  LICENSE  LM_Studio_啟動指南.md  OLLAMA_GPT_使用指南.md  PHASE4B_4E_FINAL_VALIDATION.md  README.md  RELEASE_NOTES.md  check-lm-studio.sh  claude-code-test.md  cline_api_settings.json  fix-claude-auth.sh  mursfoto-migration-script.js  mursfoto-module-analyzer.js  mursfoto-wizard-prototype.js  ollama-gpt-config.json  ollama-使用範例.js  package-lock.json  package-minimal.json  package.json  pyproject.toml  restart-cline.sh  run_with_uv.sh  start-cline-dev.sh  stats-report-1754833768485.json  stats-report-1754835269071.json  test-all-features.js  test-anthropic-api.js  test-claude-code-provider.js  test-hybrid-ai.js  test-learning-system.js  test-mcp-integration.js  test-mcp-output.json  test-ollama-gpt-engine.js  test-phase4e-systems.js  test-real-mcp.js  test-report-1754752906063.json  test-report-1754753116687.json  (+7 more)
.claude/: settings.local.json
.cline-integration/: cline-listener.js
docs/: ADVANCED_FEATURES.md  API.md  CASE_STUDY.md  CLAUDE_CODE_INTEGRATION.md  CLINE_DEVELOPMENT.md  DEVELOPMENT.md  MCP_MIGRATION_PLAN.md  MCP_PRACTICAL_IMPLEMENTATION.md  MCP_SUBAGENTS_GUIDE.md  NPM_PUBLISH_GUIDE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_PLANNING.md  PHASE2_SMART_FEATURES.md  PHASE3_COMPLETION_REPORT.md  PHASE3_DEVELOPMENT_ROADMAP.md  PHASE4B_COMPLETION_REPORT.md  PHASE4B_ENTERPRISE_RELEASE.md  PHASE4C_UX_VALIDATION.md  PHASE4D_I18N_LOCALIZATION.md  PHASE4E_COMPLETION_REPORT.md  PHASE4E_ECOSYSTEM_BUILDING.md  README.md  (+6 more)
(+113 files in other folders)
