[project]
name = "python-ml-project"
version = "0.1.0"
description = "Python 機器學習專案 - GPU 加速 Transformers 和語言模型"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "psutil>=5.9.0",
    "accelerate>=0.20.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]
exclude = ["test_*.py"]

[tool.hatch.build.targets.wheel.sources]
"." = "."

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
gpt-transformers = "gpt_oss_transformers:main"
quick-test = "quick_test_transformers:test_gpu_acceleration"
